# RVPD_WACV25_Release

./: CMakeLists.txt  LICENSE  README.md
Header/: fileManage.h  functions.h  general_include.h  hierarchical_cluster.h  visual_word.h  vp_Ransac.h  vp_compute.h
Source/: detect.cpp
results/anno/: rpvpd_8914746.txt
